# scrybe

./: .env.development  .env.secrets  .gitignore  .install_deps.ps1  .install_deps.sh  .prettierignore  Cargo.toml  Makefile  README.md  SUMRY.md  TODO.md  go.mod  go.sum  install_deps.ps1  install_deps.sh  main.go  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.js  test_simple.py  tsconfig.json  vite.config.js
.cargo/: config.toml
.github/workflows/: publish-release.yml  test-on-push.yml  trigger-scrybe-cc.yml
archive/: 202512281313.SUMRY.md  202512291108.SUMRY.md  202604251100.SUMRY.md  202605101549.SUMRY.md  202605310733.SUMRY.md  202605310856.SUMRY.md  202606070922.SUMRY.md
fixtures/transcription/: basic_en_short.expected.json
messages/: en.json  ru.json
pkg/subtitle/: titler.go
rust/: .gitignore  Cargo.toml
rust/core/: Cargo.toml
rust/core/bindings/: AdvancedSettings.ts  AppState.ts  AudioDevice.ts  AudioFormat.ts  OverlayConfig.ts  WebsocketRequest.ts  WebsocketResponse.ts  WhisperParams.ts  WhisperSegment.ts  WhisperText.ts  WhisperToggles.ts  defaults.ts
rust/core/cmds/: iterate_devices.rs  transcribe_fixture.rs
rust/core/src/: audio.rs  devices.rs  lib.rs  metrics.rs  segments.rs  types.rs  validation.rs  whisper.rs
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs  tauri_cmd_gen.rs
rust/src/: audio.rs  lib.rs  main.rs  whisper.rs
scripts/: build-windows-tauri.ps1  i18n-detect.test.mjs  overlay-layout-math.test.mjs  overlay-timing.test.mjs  overlay-ws-contract.test.mjs  prepare-windows-cuda-redist.ps1  updater-toast.test.mjs  validate-transcription.mjs  verify-cuda-imports.ps1  verify-windows-cuda-redist.ps1
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/bindings/: AppState.ts
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_bindings.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: cuda_install_hook.nsh
src-tauri/src/: handler.rs  lib.rs  main.rs  model_selection.rs  types.rs  ws.rs
src-tauri/windows/: hooks.nsh
src/lib/: bindings.ts  defaults.ts  store.svelte.ts  utils.ts
src/lib/components/: app-sidebar.svelte  audio-device.svelte  nav-main.svelte  nav-projects.svelte  nav-secondary.svelte  nav-user.svelte  recording-formats.svelte  runtime-dependency-notice.svelte  transcript-controls.svelte  transcript.svelte
src/lib/components/console/: console-column.svelte  live-preview-card.svelte  segmented-control.svelte  toggle-row.svelte
src/lib/components/header/: play-pause-button.svelte  status-pill.svelte
src/lib/components/home/: audio-waveform.svelte  bottom-toolbar.svelte  header-chips.svelte  right-rail.svelte  segment-card.svelte  session-clock.svelte
src/lib/components/overlay/: align-buttons.svelte  color-swatches.svelte  overlay-canvas.svelte  preview-canvas.svelte  text-overlay.svelte
src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
src/lib/components/ui/breadcrumb/: breadcrumb-ellipsis.svelte  breadcrumb-item.svelte  breadcrumb-link.svelte  breadcrumb-list.svelte  breadcrumb-page.svelte  breadcrumb-separator.svelte  breadcrumb.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-group-heading.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-separator.svelte  dropdown-menu-shortcut.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/label/: label.svelte
src/lib/components/ui/scroll-area/: scroll-area-scrollbar.svelte  scroll-area.svelte
src/lib/components/ui/select/: select-content.svelte  select-group-heading.svelte  select-item.svelte  select-scroll-down-button.svelte  select-scroll-up-button.svelte  select-separator.svelte  select-trigger.svelte
src/lib/components/ui/separator/: separator.svelte
src/lib/components/ui/sheet/: sheet-content.svelte  sheet-description.svelte  sheet-footer.svelte  sheet-header.svelte  sheet-overlay.svelte  sheet-title.svelte
src/lib/components/ui/sidebar/: context.svelte.ts  index.ts  sidebar-content.svelte  sidebar-footer.svelte  sidebar-group-action.svelte  sidebar-group-content.svelte  sidebar-group-label.svelte  sidebar-group.svelte  sidebar-header.svelte  sidebar-input.svelte  sidebar-inset.svelte  sidebar-menu-action.svelte  sidebar-menu-badge.svelte  sidebar-menu-button.svelte  sidebar-menu-item.svelte  sidebar-menu-skeleton.svelte  sidebar-menu-sub-button.svelte  sidebar-menu-sub.svelte  sidebar-menu.svelte  sidebar-provider.svelte  sidebar-rail.svelte  sidebar-separator.svelte  sidebar-trigger.svelte  sidebar.svelte
src/lib/components/ui/skeleton/: skeleton.svelte
src/lib/components/ui/slider/: slider.svelte
src/lib/components/ui/sonner/: sonner.svelte
src/lib/components/ui/switch/: switch.svelte
src/lib/components/ui/toggle-group/: toggle-group-item.svelte  toggle-group.svelte
src/lib/components/ui/tooltip/: tooltip-content.svelte
src/lib/hooks/: is-mobile.svelte.ts
src/lib/internal/: index.ts
src/lib/overlay/: layout-math.js  timing.js
src/lib/stores/: header.svelte.ts  session.svelte.ts  state.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/(app)/about/: +page.svelte
src/routes/(app)/models/: +page.svelte
src/routes/(app)/overlay/: +page.svelte
src/routes/(app)/settings/: +page.svelte
src/routes/about/: +page.svelte
src/routes/models/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/v1/overlay/: +page.svelte
ui/: package.json  pnpm-lock.yaml  tailwind.config.js
ui/src/: app.css
ui/src/routes/: +page.svelte
