[package]
name = "scrybe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Plugins
tauri-plugin-window-state = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version="1.42.0", features = ["full"] }
warp = "0.3.7"
warp-embed = "0.5.0"
rust-embed = "8.5.0"
ts-rs = "10.1.0"
tauri-plugin-dialog = "2"

scrybe_core = { path = "../rust/core" }

# Windows
[target.'cfg(windows)'.dependencies]
scrybe_core = { path = "../rust/core", features = [] }

# macOS
[target.'cfg(target_os = "macos")'.dependencies]
scrybe_core = { path = "../rust/core", features = ["coreml", "metal"] }
