[[bin]]
name = "scrybe"
path = "src/main.rs"

[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = "2"

[dependencies]
anyhow = "1.0"
color-eyre = "0.6.3"
eyre = "0.6.12"
futures = "0.3.31"
hf-hub = "0.4.2"
log = "0.4"
mime_guess = "2.0"
rust-embed = "8.5.0"
serde_json = "1"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio-stream = "0.1.17"
warp = "0.3.7"
warp-embed = "0.5.0"
[dependencies.scrybe_core]
features = ["whisper-runtime"]
path = "../rust/core"
[dependencies.serde]
features = ["derive"]
version = "1"
[dependencies.tauri]
features = []
version = "2"
[dependencies.tauri-specta]
features = ["derive", "typescript"]
version = "=2.0.0-rc.21"
[dependencies.tauri-svelte-synced-store]
git = "https://github.com/synthlabs/tauri-svelte-synced-store.git"
[dependencies.tokio]
features = ["macros", "sync", "rt-multi-thread"]
version = "1.42.0"
[dependencies.tracing]
features = ["log"]
version = "0.1.41"
[dependencies.uuid]
features = ["v4", "fast-rng", "macro-diagnostics"]
version = "1.12.0"

[[example]]
name = "gen_bindings"
required-features = ["gen_bindings"]

[features]
cuda = ["scrybe_core/cuda"]
gen_bindings = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "scrybe_lib"

[package]
authors = ["you"]
autobins = false
default-run = "scrybe"
description = "A Tauri App"
edition = "2021"
name = "scrybe"
version = "0.2.10"

[target]
[target."cfg(target_os = \"macos\")"]
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
[target."cfg(target_os = \"macos\")".dependencies.scrybe_core]
features = ["coreml", "metal"]
path = "../rust/core"
[target."cfg(target_os = \"windows\")".dependencies.scrybe_core]
features = ["cuda"]
path = "../rust/core"
[target."cfg(target_os = \"windows\")"]
[target."cfg(target_os = \"windows\")".dependencies]
[target."cfg(target_os = \"windows\")".dependencies.windows]
features = ["Win32_Graphics_Dwm", "Win32_Foundation"]
version = "0.61"
