[package]
name = "scrybe_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrybe_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
cpal = "~0.15.3"
hound = "3.5.1"
# samplerate = "0.2.4"
samplerate = { git = "https://github.com/xjerod/rust-samplerate.git" }
clap = { version = "4.5.23", features = ["derive", "string"] }
whisper-rs = { version = "0.13.2"}
serde = {version = "1.0.216", features = ["derive"]}
ts-rs = "10.1.0"

[features]
default = []
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
openblas = ["whisper-rs/openblas"]
metal = ["whisper-rs/metal"]
rocm = ["whisper-rs/hipblas"]
vulkan = ["whisper-rs/vulkan"]
