[package]
name = "scrybe_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrybe_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
# cpal = { git = "https://github.com/xjerod/cpal.git" }
# cpal = { path = "../../../cpal" }
cpal = "^0.17.0"
hound = "3.5.1"
# samplerate = "0.2.4"
samplerate = { git = "https://github.com/xjerod/rust-samplerate.git" }
clap = { version = "4.5.23", features = ["derive", "string"] }
whisper-rs = { version = "=0.16.0", optional = true }
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1"
specta = "=2.0.0-rc.22"
tracing = "0.1.41"
[dependencies.tauri-specta]
features = ["derive", "typescript"]
version = "=2.0.0-rc.21"

[features]
default = []
whisper-runtime = ["dep:whisper-rs", "whisper-rs/tracing_backend"]
coreml = ["whisper-runtime", "whisper-rs/coreml"]
cuda = ["whisper-runtime", "whisper-rs/cuda"]
openblas = ["whisper-runtime", "whisper-rs/openblas"]
metal = ["whisper-runtime", "whisper-rs/metal"]
rocm = ["whisper-runtime", "whisper-rs/hipblas"]
vulkan = ["whisper-runtime", "whisper-rs/vulkan"]

[[bin]]
name = "iterate_devices"
path = "cmds/iterate_devices.rs"

[[bin]]
name = "iterate_devices_w_device_mngr"
path = "cmds/iterate_devices_w_device_mngr.rs"

[[bin]]
name = "transcribe_fixture"
path = "cmds/transcribe_fixture.rs"
required-features = ["whisper-runtime"]
